search quote model

--- a/content/UseCase_8kqCjF6D_AAAAQjs.html
+++ b/content/UseCase_8kqCjF6D_AAAAQjs.html
@@ -101,8 +101,8 @@ Properties			</td>
 <span class="TableContent Documentation"><head>
     
   </head>
-  <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-left:0;margin-right:0;">
-    <p style="margin-top:0pt;margin-left:0pt;margin-right:0pt;margin-bottom:.0001pt;">
+  <body style="color:#000000;font-weight:normal;font-size:12px;font-family:Dialog;margin-right:0;margin-left:0;">
+    <p style="margin-bottom:.0001pt;margin-top:0pt;margin-right:0pt;margin-left:0pt;">
       To update/modify a quote on the system.
     </p>
   </body></span>			</td>
@@ -412,6 +412,18 @@ Scenario			</td>
 			</td>
 			<td>
 <span class="TableContent"><span class="FoeIndex">4.</span> User clicks on <b>Update .</b></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">4.1.</span> <span class="FoeControlSystem">SYSTEM</span> creates quote.</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">4.2.</span> <span class="FoeControlSystem">SYSTEM</span> returns valid quote.</span>			</td>
 		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
