--- a/content/ActivityDiagram_menu.html
+++ b/content/ActivityDiagram_menu.html
@@ -50,6 +50,16 @@
 			<td width="*" class="TableContent">
 <a href="ActivityDiagram_DHbLgl6D_AAAASDd.html" class="ItemLink" target="_content_pane">create quote</a>			</td>
 		</tr>
+		<tr class="TableRow1">
+			<td style="width: 24px">
+			</td>
+			<td style="width: 18px">
+				<div style="width: 18px !important;height: 18px !important;background-image:url(../images/icons/ActivityDiagram.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/ActivityDiagram.png'); background-repeat: no-repeat;"/>			</td>
+			<td style="width: 5px">
+			</td>
+			<td width="*" class="TableContent">
+<a href="ActivityDiagram_E1D_bl6D_AAAAQzC.html" class="ItemLink" target="_content_pane">search quote</a>			</td>
+		</tr>
 	</table>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
 		<tr>
