use case updates

--- a/content/Actor_GljCjF6D_AAAAQnV.html
+++ b/content/Actor_GljCjF6D_AAAAQnV.html
@@ -321,6 +321,32 @@ Relationships Summary			</td>
 				<span class="TableContent">
 					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/Association.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Association.png'); background-repeat: no-repeat;">
 					</div>
+&nbsp;<a href="Actor_GljCjF6D_AAAAQnV.html#NBnk3l6D.AAAARDD" class="ItemLink"> : Association</a>				</span>
+			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_a2_CjF6D_AAAAQme.html" class="ItemLink">view quote details : Use Case</a>				</span>
+			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/Actor.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Actor.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="Actor_GljCjF6D_AAAAQnV.html" class="ItemLink">user : Actor</a>				</span>
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/Association.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Association.png'); background-repeat: no-repeat;">
+					</div>
 &nbsp;<a href="Actor_GljCjF6D_AAAAQnV.html#haJpjF6D.AAAAQwF" class="ItemLink"> : Association</a>				</span>
 			</td>
 			<td class="TableCellSpaceHolder20Px">
@@ -340,7 +366,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_5RWCjF6D_AAAAQl7.html" class="ItemLink">search quote : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -366,7 +392,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_8kqCjF6D_AAAAQjs.html" class="ItemLink">update quote : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -392,7 +418,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_owCCjF6D_AAAAQia.html" class="ItemLink">create quote : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -418,7 +444,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_bEqCjF6D_AAAAQjg.html" class="ItemLink">update account : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -444,7 +470,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_xQCCjF6D_AAAAQiM.html" class="ItemLink">create account : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -470,7 +496,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_if6CjF6D_AAAAQkL.html" class="ItemLink">print quote : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -496,7 +522,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_mwCCjF6D_AAAAQim.html" class="ItemLink">create work order : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -522,7 +548,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase__kqCjF6D_AAAAQj4.html" class="ItemLink">update work order : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -548,7 +574,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_tf6CjF6D_AAAAQkX.html" class="ItemLink">print work order : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow1">
+		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -574,7 +600,7 @@ Relationships Summary			</td>
 &nbsp;<a href="UseCase_GRWCjF6D_AAAAQlv.html" class="ItemLink">lookup work order : Use Case</a>				</span>
 			</td>
 		</tr>
-		<tr class="TableRow2">
+		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
@@ -1207,6 +1233,258 @@ Relationships Detail			</td>
 								<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
 								</div>
 &nbsp;<a href="UseCase_HBWCjF6D_AAAAQkn.html" class="ItemLink">search by client contact : Use Case</a>							</span>
+						</td>
+					</tr>
+					<tr class="TableRow1">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Multiplicity</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Unspecified</span>						</td>
+					</tr>
+					<tr class="TableRow2">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Aggregation Kind</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent">None</span>						</td>
+					</tr>
+					<tr class="TableRow1">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Navigable</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent">true</span>						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">To</span>			</td>
+			<td>
+			</td>
+			<td>
+				<table border="0" cellpadding="0" width="100%" cellspacing="0">
+					<tr class="SubtableHeader">
+						<td class="TableCellSpaceHolder10Px">
+						</td>
+						<td width="25%">
+<span class="TableHeaderText">Name</span>						</td>
+						<td class="TableCellSpaceHolder20Px">
+						</td>
+						<td>
+<span class="TableHeaderText">Value</span>						</td>
+					</tr>
+					<tr>
+						<td colSpan="4" class="TableHeaderLine2">
+						</td>
+					</tr>
+					<tr class="TableRow1">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Role</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent"></span>						</td>
+					</tr>
+					<tr class="TableRow2">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Element</span>						</td>
+						<td>
+						</td>
+						<td>
+							<span class="TableContent">
+								<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/Actor.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/Actor.png'); background-repeat: no-repeat;">
+								</div>
+&nbsp;<a href="Actor_GljCjF6D_AAAAQnV.html" class="ItemLink">user : Actor</a>							</span>
+						</td>
+					</tr>
+					<tr class="TableRow1">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Multiplicity</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Unspecified</span>						</td>
+					</tr>
+					<tr class="TableRow2">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Aggregation Kind</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent">None</span>						</td>
+					</tr>
+					<tr class="TableRow1">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Navigable</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent">true</span>						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Abstract</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent">false</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Leaf</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent">false</span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Visibility</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Unspecified</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Derived</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent">false</span>			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td style="height: 5px;">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+<a name="NBnk3l6D.AAAARDD"></a>	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td width="25%">
+<span class="TableHeaderText">Name</span>			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Value</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">Name</span>			</td>
+			<td>
+			</td>
+			<td>
+<span class="TableContent"></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td>
+			</td>
+			<td>
+<span class="TableContent">From</span>			</td>
+			<td>
+			</td>
+			<td>
+				<table border="0" cellpadding="0" width="100%" cellspacing="0">
+					<tr class="SubtableHeader">
+						<td class="TableCellSpaceHolder10Px">
+						</td>
+						<td width="25%">
+<span class="TableHeaderText">Name</span>						</td>
+						<td class="TableCellSpaceHolder20Px">
+						</td>
+						<td>
+<span class="TableHeaderText">Value</span>						</td>
+					</tr>
+					<tr>
+						<td colSpan="4" class="TableHeaderLine2">
+						</td>
+					</tr>
+					<tr class="TableRow1">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Role</span>						</td>
+						<td>
+						</td>
+						<td>
+<span class="TableContent"></span>						</td>
+					</tr>
+					<tr class="TableRow2">
+						<td>
+						</td>
+						<td>
+<span class="TableContent">Element</span>						</td>
+						<td>
+						</td>
+						<td>
+							<span class="TableContent">
+								<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+								</div>
+&nbsp;<a href="UseCase_a2_CjF6D_AAAAQme.html" class="ItemLink">view quote details : Use Case</a>							</span>
 						</td>
 					</tr>
 					<tr class="TableRow1">
