--- a/content/UseCase_if6CjF6D_AAAAQkL.html
+++ b/content/UseCase_if6CjF6D_AAAAQkL.html
@@ -206,7 +206,7 @@ Properties			</td>
 			<td>
 			</td>
 			<td>
-<span class="TableContent">Identify</span>			</td>
+<span class="TableContent">Design</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td>
@@ -340,6 +340,74 @@ Relationships Summary			</td>
 	<table border="0" cellpadding="0" width="100%" cellspacing="0">
 		<tr>
 			<td class="Category">
+Scenario			</td>
+		</tr>
+		<tr>
+			<td class="TableCellSpaceHolder5PxTall">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Steps</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="2" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">1.</span> <span><img src="../images/icons/UseCase.png" style="vertical-align: middle"/><a href="UseCase_a2_CjF6D_AAAAQme.html" class="ItemLink">view quote details</a></span></span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent"><span class="FoeIndex">2.</span> User requests for a print format of quote</span>			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">2.1.</span> <span class="FoeControlSystem">SYSTEM</span> creates print job </span>			</td>
+		</tr>
+		<tr class="TableRow2">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+<span class="TableContent">&nbsp;&nbsp;&nbsp;&nbsp;<span class="FoeIndex">2.2.</span> <span class="FoeControlSystem">SYSTEM</span> prompts "Printing started"</span>			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+	<p>
+	</p>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="Category">
 Details			</td>
 		</tr>
 		<tr>
@@ -378,7 +446,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">User, Subfunction</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -388,7 +456,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Medium</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -398,7 +466,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Base</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -408,7 +476,7 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">Not Yet Started</span>			</td>
 		</tr>
 		<tr class="TableRow1">
 			<td class="TableCellSpaceHolder10Px">
@@ -418,7 +486,8 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">User must have an existing account
+Print subsystem must be available</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
@@ -438,13 +507,73 @@ Details			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
-<span class="TableContent"></span>			</td>
+<span class="TableContent">D. Kafui Kpoh</span>			</td>
 		</tr>
 		<tr class="TableRow2">
 			<td class="TableCellSpaceHolder10Px">
 			</td>
 			<td>
 <span class="TableContent">Assumptions</span>			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+<span class="TableContent"></span>			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="TableCellSpaceHolder1PxTall">
+			</td>
+		</tr>
+		<tr>
+			<td class="TableFooter">
+			</td>
+		</tr>
+	</table>
+	<p>
+	</p>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td class="Category">
+References			</td>
+		</tr>
+		<tr>
+			<td class="TableCellSpaceHolder5PxTall">
+			</td>
+		</tr>
+	</table>
+	<table border="0" cellpadding="0" width="100%" cellspacing="0">
+		<tr>
+			<td colSpan="4" class="TableHeaderLine">
+			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine1">
+			</td>
+		</tr>
+		<tr class="TableHeader">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td width="25%">
+<span class="TableHeaderText">File Name</span>			</td>
+			<td class="TableCellSpaceHolder20Px">
+			</td>
+			<td>
+<span class="TableHeaderText">Description</span>			</td>
+		</tr>
+		<tr>
+			<td colSpan="4" class="TableHeaderLine2">
+			</td>
+		</tr>
+		<tr class="TableRow1">
+			<td class="TableCellSpaceHolder10Px">
+			</td>
+			<td>
+				<span class="TableContent">
+					<div style="float: left; width: 18px !important;height: 18px !important;background-image:url(../images/icons/UseCase.png) !important; background-image:url(''); filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/icons/UseCase.png'); background-repeat: no-repeat;">
+					</div>
+&nbsp;<a href="UseCase_a2_CjF6D_AAAAQme.html" class="ItemLink">view quote details : Use Case</a>				</span>
+			</td>
 			<td class="TableCellSpaceHolder20Px">
 			</td>
 			<td>
